// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`json body > array input > requires at least one source 1`] = `
{
  "code": "FST_ERR_VALIDATION",
  "error": "Bad Request",
  "message": "body must be object, body/0 must NOT have fewer than 1 properties, body must match exactly one schema in oneOf",
  "statusCode": 400,
}
`;

exports[`json body > object input > GET fails with json body 1`] = `
{
  "code": "FST_ERR_VALIDATION",
  "error": "Bad Request",
  "message": "querystring must have required property 'source', querystring must have required property 'source', querystring must have required property 'source', querystring must match exactly one schema in oneOf",
  "statusCode": 400,
}
`;

exports[`json body > object input > errors correctly on an empty object 1`] = `
{
  "code": "FST_ERR_VALIDATION",
  "error": "Bad Request",
  "message": "body must NOT have fewer than 1 properties, body must be array, body must match exactly one schema in oneOf",
  "statusCode": 400,
}
`;
